# Pi_Manager

./: README.md  pyproject.toml
pi_manager/: cli.py  config.py  deploy.py  repl.py  services.py  ssh.py
